@@ -71,6 +71,8 @@ En diferentes roles (master/slave), en partida streaming o no, si se trae snapsh
 
 Alternativa en modo texto
 icono para zengonlinestatus
+
+Teclado en pantalla no va con Zeng online?
 ------
 
 
